@@ -1,3 +1,8 @@
+r160 - october, 8, 2009
+    * association : templates > loginSuccess.php > explicit message
+    * MembrePeer : doSelectPending() method
+    
+
 r159 - october, 8, 2009
     * myUser.class.php : new method getTemporaryAssociationId()
     * membre : actions > executeFirstcreate > give the temporary associationId
